# pyspark-shared-spark-session-helper

./: .gitignore  .pylintrc  .travis.yml  Pipfile  README.md  pycodestyle.ini  pylintrc_hook.py  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini
.github/workflows/: master.yml
ci/: java_install.sh
src/awesome/app/: awesome_app.py
src/awesome/job/: awesome_job.py
src/awesome/service/: awesome_service.py
tests/: commons.py  shared_spark_session_helper.py
tests/conf/: log4j2.properties
tests/endtoend/: __init__.py  test_awesome_app.py
tests/holdenkarau/: sqltestcase.py  testcase.py
tests/integration/: test_awesome_job.py
tests/integration/fixtures/awesomejob/sourcepath/: awesome.json
tests/unit/: test_awesome_service.py
