[tool.poetry]
name = "awesome"
version = "0.1.0"
description = "PySpark: unit, integration and end to end tests"
authors = ["Gustavo Martin Morcuende"]
license = "Apache License, Version 2.0"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.10.4"
pyspark = "==3.5.1"
pendulum = "==3.0.0"

[tool.poetry.dev-dependencies]
mock = "==5.1.0"
pytest = "==8.3.2"
pytest-mock = "==3.14.0"
pytest-html = "==4.1.1"
pytest-cov = "==5.0.0"
ansi2html = "==1.8.0"
pycodestyle = "==2.12.1"
pylint = "==3.2.6"
pylintfileheader = "==1.0.0"

[build-system]
requires = ["poetry-core", "poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"
